crates/alder-parse/src/snapshots/alder_parse__module__tests__module_header_deeply_nested.snap
---
source: crates/alder-parse/src/module.rs
description: "Code:\n\nmodule Platform.Cmd.Extra exposing (batch, none)"
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
        value: "Platform.Cmd.Extra",
    },
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 36,
            },
            end: Position {
                line: 1,
                column: 49,
            },
        },
        value: Explicit(
            [
                Lower(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 37,
                            },
                            end: Position {
                                line: 1,
                                column: 42,
                            },
                        },
                        value: "batch",
                    },
                ),
                Lower(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 44,
                            },
                            end: Position {
                                line: 1,
                                column: 48,
                            },
                        },
                        value: "none",
                    },
                ),
            ],
        ),
    },
)
